SERVER-56772 Do not std::move validator BSON in collMod in case a write conflict is thrown